# canbus-sim

./: .gitignore  CMakeLists.txt  README.md  SimRow.qml  SocketPanel.qml  main.cpp  main.qml  qml.qrc  wallboxHMI.pro  wallboxHMI.pro.user.3737bb0  wallboxcharger.cpp  wallboxcharger.h
build_dwin/: .qmake.stash  Makefile  moc_CardReader.cpp  moc_predefs.h  moc_wallboxcharger.cpp
